Update deployment configuration and project name to reflect new domain structure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "office.speednetkhulna.com",
+  "name": "my.speednetkhulna.com",
   "version": "1.0.0",
   "description": "Next-Gen Solution by Ahadix",
   "main": "server/index.js",
