--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,19 +23,17 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
-          cache-dependency-path: |
-            client/package-lock.json
-            server/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install Frontend Dependencies
         working-directory: client
-        run: npm ci
+        run: npm install
 
       - name: Build Frontend
         working-directory: client
         env:
           NODE_ENV: production
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_API_URL: https://my.speednetkhulna.com
         run: npm run build
 
       - name: Create Deployment Archive
@@ -74,7 +72,8 @@ jobs:
 
             APP_NAME="office-app"
             APP_PATH="${{ secrets.SERVER_PATH }}"
-            FRONTEND_PATH="${{ secrets.FRONTEND_PATH }}"
+            # New domain folder path
+            FRONTEND_PATH="${{ secrets.FRONTEND_PATH }}/my.speednetkhulna.com"
 
             # Ensure directories exist
             mkdir -p "$APP_PATH"
@@ -100,7 +99,7 @@ jobs:
             JWT_SECRET=${{ secrets.JWT_SECRET }}
             SESSION_SECRET=${{ secrets.SESSION_SECRET }}
             TZ=Asia/Dhaka
-            FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+            FRONTEND_URL=https://my.speednetkhulna.com
             EOF
 
             # Start/Restart with PM2
