Add terser as a dependency for JavaScript minification

--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "terser": "^5.31.0"
   },
   "engines": {
     "node": ">=14.0.0",
