--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -146,8 +146,8 @@ jobs:
             # Try to install dependencies
             npm install --production || npm install
 
-            # Create .env from secrets
-            cat > .env <<EOF
+            # Create root .env from secrets (server code loads ../.env and ../../.env)
+            cat > "$APP_PATH/.env" <<EOF
             PORT=5000
             NODE_ENV=production
             DB_HOST=${{ secrets.DB_HOST }}
@@ -176,9 +176,19 @@ jobs:
             rm -rf "$FRONTEND_PATH"/*
             cp -r "$APP_PATH/client/dist/"* "$FRONTEND_PATH"/
 
-            # Health check
-            sleep 5
-            curl -fsS http://localhost:5000/api/health > /dev/null
+            # Health check with retries
+            ATTEMPT=1
+            MAX_ATTEMPTS=12
+            until curl -fsS http://localhost:5000/api/health > /dev/null; do
+              if [ "$ATTEMPT" -ge "$MAX_ATTEMPTS" ]; then
+                echo "Health check failed after ${MAX_ATTEMPTS} attempts."
+                pm2 logs "$APP_NAME" --lines 120 --nostream || true
+                exit 1
+              fi
+              echo "Health check attempt ${ATTEMPT}/${MAX_ATTEMPTS} failed. Retrying in 5s..."
+              ATTEMPT=$((ATTEMPT + 1))
+              sleep 5
+            done
 
       - name: Deployment Result
         if: always()
