--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,7 +150,7 @@ jobs:
 
             # Create root .env from secrets (server code loads ../.env and ../../.env)
             echo "Phase: write environment file"
-            cat > "$APP_PATH/.env" <<EOF
+            cat > "$APP_PATH/.env" <<'EOF'
             PORT=5000
             NODE_ENV=production
             DB_HOST=${{ secrets.DB_HOST }}
@@ -191,6 +191,14 @@ jobs:
               exit 1
             fi
 
+            PM2_PID=$("$PM2_BIN" pid "$APP_NAME" | tail -n 1 || true)
+            if [ -z "$PM2_PID" ] || [ "$PM2_PID" = "0" ]; then
+              echo "PM2 reports app is not online right after start."
+              "$PM2_BIN" status || true
+              "$PM2_BIN" logs "$APP_NAME" --lines 120 --nostream || true
+              exit 1
+            fi
+
             "$PM2_BIN" save || echo "Warning: pm2 save failed; continuing deployment."
 
             # Deploy Frontend to public_html
@@ -202,7 +210,7 @@ jobs:
             echo "Phase: health check"
             ATTEMPT=1
             MAX_ATTEMPTS=12
-            until curl -fsS http://localhost:5000/api/health > /dev/null; do
+            until curl -fsS http://127.0.0.1:5000/api/health > /dev/null; do
               if [ "$ATTEMPT" -ge "$MAX_ATTEMPTS" ]; then
                 echo "Health check failed after ${MAX_ATTEMPTS} attempts."
                 "$PM2_BIN" logs "$APP_NAME" --lines 120 --nostream || true
