Add database dump and sync scripts
- Implemented a new script `dump_db.js` to export data from specified tables into a SQL dump file.
- Created `sync-postgres-to-main-host.js` to facilitate syncing data from a source PostgreSQL database to a main host database using `pg_dump` and `psql`.
- Both scripts include error handling and environment variable configuration for database connections.

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "node index.js",
+    "db:sync-main": "node scripts/sync-postgres-to-main-host.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
