--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,20 @@ DB_USER=postgres
 DB_PASSWORD=your_database_password_here
 DB_NAME=office_db
 
+# Optional source override for sync script (if different from DB_* above)
+# SRC_DB_HOST=localhost
+# SRC_DB_PORT=5432
+# SRC_DB_USER=postgres
+# SRC_DB_PASSWORD=your_source_database_password
+# SRC_DB_NAME=office_db
+
+# Required target "main host" database for sync script
+MAIN_DB_HOST=your_main_host
+MAIN_DB_PORT=5432
+MAIN_DB_USER=your_main_host_user
+MAIN_DB_PASSWORD=your_main_host_password
+MAIN_DB_NAME=your_main_host_database
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
