--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon index.js",
     "dev": "node index.js",
     "db:sync-main": "node scripts/sync-postgres-to-main-host.js",
+    "db:sanitize-dump": "node scripts/sanitize-pg-dump-for-old-postgres.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
