--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,12 +82,22 @@ jobs:
             # Frontend deploy path:
             # 1) Use FRONTEND_PATH secret when provided
             # 2) Otherwise fallback to cPanel-style default: $HOME/public_html
+            DEFAULT_FRONTEND_BASE="$HOME/public_html"
             FRONTEND_BASE="${{ secrets.FRONTEND_PATH }}"
-            if [ -z "$FRONTEND_BASE" ]; then
-              FRONTEND_BASE="$HOME/public_html"
-              echo "FRONTEND_PATH secret not set. Falling back to: $FRONTEND_BASE"
+            if [ -z "$FRONTEND_BASE" ] || echo "$FRONTEND_BASE" | grep -Eq '<[^>]+>'; then
+              FRONTEND_BASE="$DEFAULT_FRONTEND_BASE"
+              echo "FRONTEND_PATH secret missing or placeholder. Falling back to: $FRONTEND_BASE"
             fi
             FRONTEND_BASE="${FRONTEND_BASE%/}"
+
+            # If secret points to an inaccessible path, fallback to home public_html
+            if ! mkdir -p "$FRONTEND_BASE" 2>/dev/null; then
+              echo "FRONTEND_PATH is not writable: $FRONTEND_BASE"
+              FRONTEND_BASE="$DEFAULT_FRONTEND_BASE"
+              mkdir -p "$FRONTEND_BASE"
+              echo "Fallback FRONTEND_BASE: $FRONTEND_BASE"
+            fi
+
             FRONTEND_PATH="${FRONTEND_BASE}/my.speednetkhulna.com"
             echo "Resolved FRONTEND_PATH: $FRONTEND_PATH"
 
