--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "@tanstack/react-query": "^5.90.21",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "html2canvas": "^1.4.1",
@@ -34,8 +35,8 @@
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
-    "vite": "^5.4.21",
-    "terser": "^5.31.0"
+    "terser": "^5.31.0",
+    "vite": "^5.4.21"
   },
   "engines": {
     "node": ">=14.0.0",
